apps/my-web-app/overlays/aws-us-west-2-cc-smarsh-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kymc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kymc
      app.kubernetes.io/instance: kymc
  template:
    spec:
      containers:
        - name: kymc
          resources:
            limits:
              cpu: 1000m
              memory: 2G
            requests:
              cpu: 1000m
              memory: 2G
