apps/my-web-app/overlays/aws-us-west-2-cc-smarsh-test/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cc-route-kymc-test
  namespace: cc-smarsh-test
spec:
  hosts:
    - "kymc.cc-test.internal.smarsh.us-west-2.aws.smarsh.cloud"
  gateways:
    - istio-ingress/apps-https-tcp-gw-ep-mt-smarsh-test
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: kymc
      match:
      - uri:
          prefix: "/"
